--- a/index.html
+++ b/index.html
@@ -331,10 +331,10 @@ function draw()
           </script>
 
 
-        <script src="https://raw.githubusercontent.com/32teeth/html5-plugin-canvas-gamepad/master/example/game/js/game.js"></script>
-        <script src="https://raw.githubusercontent.com/32teeth/multikey.js/master/js/multikey.js"></script>
-        <script src="https://raw.githubusercontent.com/32teeth/html5-plugin-canvas-gamepad/master/CanvasGamepad.js"></script>
-    <script>
+        <script type="text/javascript" src="https://raw.githubusercontent.com/32teeth/html5-plugin-canvas-gamepad/master/example/game/js/game.js"></script>
+        <script type="text/javascript" src="https://raw.githubusercontent.com/32teeth/multikey.js/master/js/multikey.js"></script>
+        <script type="text/javascript" src="https://raw.githubusercontent.com/32teeth/html5-plugin-canvas-gamepad/master/CanvasGamepad.js"></script>
+    <script type="text/javascript">
       CanvasGamepad.setup(
         {
           canvas:"controller",
